--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body, a:link, a:visited, a:active{
 .title, .addDancerButton{
   padding:5px 12px;
   float:right;
+  display: inline-block;;
 }
 .topbar{
   height:32px;
@@ -26,11 +27,13 @@ body, a:link, a:visited, a:active{
   position: absolute;
 }
 .superman{
-  border: 10px solid blue;
+  border: 30px solid blue;
   border-radius: 10px;
   position: absolute;
   animation-name: test;
-  animation-duration: 0s;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+  animation-duration: 1s;
   animation-iteration-count: infinite;
 }
 .extra{
@@ -38,22 +41,20 @@ body, a:link, a:visited, a:active{
   border-radius: 10px;
   position: absolute;
   animation-name: test2;
-  animation-duration: 4s;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+  animation-duration: 1s;
   animation-iteration-count: infinite;
 }
 
 /*I need to find a way to impliment a variable that is equal the left value of the current node... */
 @keyframes test {
-  /*var pos = (left);
-  0% {left: (left)px;}
-  50% {left: (left) + 100px;}
-  100% {left: (left);}*/
-  0% {left: 100px;}
-  50% {left: 600px;}
-  100% {left: 100px;}
+  0% {transform: translate(-100px);}
+  50% {transform: rotate(180deg);}
+  100% {transform: translate(100px);}
 }
 @keyframes test2 {
-  0% {top: 0px;}
-  50% {top: 100px;}
-  100% {top: 0px;}
+  0% {transform: translate(0px, -100px);}
+  50% {transform: scale(10);}
+  100% {transform: translate(0px, 100px);}
 }
