--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,11 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  background-image: url('./src/img/maxresdefault.jpg');
   font-size: 18px;
+  background-repeat: no-repeat;
+ background-position: center;
+ background-size: 100% ;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -22,39 +25,93 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border: 10px solid red;
-  border-radius: 10px;
   position: absolute;
+  box-sizing: border-box;
+  background: url('./src/img/Ryu_TvC.png');
+  display: block;
+  background-size: 100% 100%;
+  width: 125px;
+  height: 200px;
 }
 .superman{
-  border: 30px solid blue;
-  border-radius: 10px;
+  
   position: absolute;
-  animation-name: test;
+  animation-name: spin;
   animation-timing-function: linear;
   animation-direction: alternate;
   animation-duration: 1s;
   animation-iteration-count: infinite;
+  box-sizing: border-box;
+  background: url('./src/img/Zangief-hdstance.gif');
+  display: block;
+  background-size: 100% 100%;
+  width: 110px;
+  height: 144px;
+  /*padding-left: 20px;*/ 
+}
+.superman:hover{
+  
+  position: absolute;
+  animation-name: spin2;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  box-sizing: border-box;
+  background: url('./src/img/Zangief-hdstance.gif');
+  display: block;
+  background-size: 100% 100%;
+  width: 110px;
+  height: 144px;
+  /*padding-left: 20px;*/ 
 }
 .extra{
-  border: 10px solid Green;
-  border-radius: 10px;
   position: absolute;
-  animation-name: test2;
+  animation-name: grow;
   animation-timing-function: linear;
   animation-direction: alternate;
   animation-duration: 1s;
   animation-iteration-count: infinite;
+box-sizing: border-box;
+  background: url('./src/img/Chun-Li_tatsunoko.png');
+  display: block;
+  background-size: 100% 100%;
+  width: 125px;
+  height: 185px;
+}
+.extra:hover{
+  position: absolute;
+  animation-name: grow2;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+box-sizing: border-box;
+  background: url('./src/img/Chun-Li_tatsunoko.png');
+  display: block;
+  background-size: 100% 100%;
+  width: 125px;
+  height: 185px;
 }
 
 /*I need to find a way to impliment a variable that is equal the left value of the current node... */
-@keyframes test {
+@keyframes spin {
+  0% {transform: translate(-100px);}
+  50% {transform: rotate(45deg);}
+  100% {transform: translate(100px);}
+}
+@keyframes spin2 {
   0% {transform: translate(-100px);}
   50% {transform: rotate(180deg);}
   100% {transform: translate(100px);}
 }
-@keyframes test2 {
+@keyframes grow {
   0% {transform: translate(0px, -100px);}
-  50% {transform: scale(10);}
+  50% {transform: scale(2);}
+  100% {transform: translate(0px, 100px);}
+}
+@keyframes grow2 {
+  0% {transform: translate(0px, -100px);}
+  50% {transform: scale(0.5);}
   100% {transform: translate(0px, 100px);}
 }
